FILE ( GLOB CORELIB_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

SET ( CORELIB_BIN_FILE "${CORELIB_BIN_NAME}" )

ADD_LIBRARY ( ${CORELIB_BIN_FILE} ${CORELIB_LINK_TYPE} ${CORELIB_SOURCE_FILES} )

FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE}
        APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

IF ( MINGW )
    TARGET_LINK_LIBRARIES ( ${CORELIB_BIN_FILE} "-lws2_32 -lwsock32" )
ENDIF (  )

TARGET_LINK_LIBRARIES ( ${CORELIB_BIN_FILE}
    ${Boost_LIBRARIES}
    ${CPPDB_LIBRARY}
    ${CRYPTOPP_LIBRARY}
    ${LIBB64_LIBRARY}
    ${SQLITE3_LIBRARY}
)

IF ( DEFINED CORELIB_DEFINES )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${CORELIB_DEFINES}" )
ENDIF (  )

IF ( DEFINED LIBB64_BUFFERSIZE )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "BUFFERSIZE=${LIBB64_BUFFERSIZE}" )
ENDIF (  )

IF ( DEFINED UNZIP_BINARY )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "UNZIP_BINARY=\"${UNZIP_BINARY}\"" )
ENDIF (  )

GET_PROPERTY(CORELIB_LIBRARY TARGET ${CORELIB_BIN_FILE} PROPERTY LOCATION)

IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
    ADD_CUSTOM_COMMAND ( TARGET ${CORELIB_BIN_FILE}
        POST_BUILD
        COMMAND strip ${CORELIB_LIBRARY}
        COMMAND strip -R.comment ${CORELIB_LIBRARY}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
ENDIF (  )


